# CauchyProblem

./: CauchyProblem.cabal  LICENSE  README.md
app/: CauchyProblem.hs  Main.hs  NumericalMethods.hs  Plotting.hs  Task.hs  Times.hs
app/NumericalMethods/: ErrorMargin.hs  Euler.hs  Methods.hs
app/Task/: Explicit.hs  Features.hs  Solve.hs
executable/examples/: cicular_orbit.txt  crash.txt  elliptical_orbit.txt  hyperbolical_orbit.txt
