cabal-version:      3.0

name:               CauchyProblem
version:            0.1.0.0

synopsis: This package implements different numerical methods for solving Cauchy problem.
description: This package implements different numerical methods for solving Cauchy problem.
             It implements several numerical methods to solve Cauchy problem

license:            MIT
license-file:       LICENSE

author:             JktuJQ
maintainer:         odmamontov@gmail.com

category:           Math

build-type:         Simple
extra-doc-files: README.md

common warnings
    ghc-options: -Wall

executable CauchyProblem
    import:           warnings

    main-is:          Main.hs

    build-depends:    base ^>=4.17.2.1,
    hs-source-dirs:   app

    default-language: Haskell2010

source-repository head
  type:     git
  location: https://github.com/JktuJQ/CauchyProblem/